# tulipindicators

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING  Makefile  README.md  benchmark.c  benchmark2.c  build.tcl  candles.c  candles.h  cli.c  doc.tcl  example1.c  example2.c  fuzzer.c  indicators.c  indicators.h  indicators.tcl  indicators_index.c  meson.build  run.sh  sample.c  sample_pst.c  smoke.c  tiamalgamation.c
.github/: FUNDING.yml
beta/: abands.c  alma.c  ce.c  cmf.c  copp.c  dc.c  fi.c  kc.c  kst.c  mama.c  pbands.c  pc.c  pfe.c  posc.c  rmi.c  rvi.c  smi.c  tsi.c  vwap.c
indicators/: abands.c  abs.c  acos.c  ad.c  add.c  adosc.c  adx.c  adxr.c  alma.c  ao.c  apo.c  aroon.c  aroonosc.c  asin.c  atan.c  atr.c  avgprice.c  bbands.c  bop.c  cci.c  cdl.c  cdl.h  ce.c  ceil.c  cmf.c  cmo.c  copp.c  corr.c  cos.c  cosh.c  crossany.c  crossdir.c  crossover.c  cvi.c  dc.c  decay.c  dema.c  di.c  div.c  dm.c  (+99 more)
pst_indicators/: pst_indicators.cpp  pst_interface.h  pst_manager.cpp  pst_manager.h  pti_rsi.h  pti_sma.h
templates/: amal.txt  candles.c  candles.h  indicators.c  indicators.h
tests/: atoz.txt  candles.txt  extra.txt  untest.txt
utils/: buffer.c  buffer.h  localbuffer.h  meson.build  minctest.h  minmax.h  testing.c  testing.h
