tulip_indicators_sources = ([
    'abs.c',
    'acos.c',
    'ad.c',
    'add.c',
    'adosc.c',
    'adx.c',
    'adxr.c',
    'ao.c',
    'apo.c',
    'aroon.c',
    'aroonosc.c',
    'asin.c',
    'atan.c',
    'atr.c',
    'avgprice.c',
    'bbands.c',
    'bop.c',
    'cci.c',
    'ceil.c',
    'cmo.c',
    'cos.c',
    'cosh.c',
    'crossany.c',
    'crossover.c',
    'cvi.c',
    'decay.c',
    'dema.c',
    'di.c',
    'div.c',
    'dm.c',
    'dpo.c',
    'dx.c',
    'edecay.c',
    'ema.c',
    'emv.c',
    'exp.c',
    'fisher.c',
    'floor.c',
    'fosc.c',
    'hma.c',
    'kama.c',
    'kvo.c',
    'lag.c',
    'linreg.c',
    'linregintercept.c',
    'linregslope.c',
    'ln.c',
    'log10.c',
    'macd.c',
    'marketfi.c',
    'mass.c',
    'max.c',
    'md.c',
    'medprice.c',
    'mfi.c',
    'min.c',
    'mom.c',
    'msw.c',
    'mul.c',
    'natr.c',
    'nvi.c',
    'obv.c',
    'ppo.c',
    'psar.c',
    'pvi.c',
    'qstick.c',
    'roc.c',
    'rocr.c',
    'round.c',
    'rsi.c',
    'sin.c',
    'sinh.c',
    'sma.c',
    'sqrt.c',
    'stddev.c',
    'stderr.c',
    'stoch.c',
    'stochrsi.c',
    'sub.c',
    'sum.c',
    'tan.c',
    'tanh.c',
    'tema.c',
    'todeg.c',
    'torad.c',
    'tr.c',
    'trima.c',
    'trix.c',
    'trunc.c',
    'tsf.c',
    'typprice.c',
    'ultosc.c',
    'var.c',
    'vhf.c',
    'vidya.c',
    'volatility.c',
    'vosc.c',
    'vwma.c',
    'wad.c',
    'wcprice.c',
    'wilders.c',
    'willr.c',
    'wma.c',
    'zlema.c'
])

tulip_indicators = static_library(
    'tulip_indicators',
    tulip_indicators_sources
)

tulip_indicators_dep = declare_dependency(
  link_with : tulip_indicators,
  include_directories : include_directories('.')
)
